[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/card_front.png" type="Texture" id=2]
[ext_resource path="res://assets/money_m.png" type="Texture" id=3]
[ext_resource path="res://assets/burn.png" type="Texture" id=4]
[ext_resource path="res://assets/ico_cards/soldier.jpg" type="Texture" id=5]
[ext_resource path="res://prefabs/Card.gd" type="Script" id=6]
[ext_resource path="res://assets/font/Anton-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/money_outlined.png" type="Texture" id=9]
[ext_resource path="res://assets/fx/card_burn_fx_4x4.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=2]
extra_spacing_bottom = -5
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
outline_color = Color( 0.952941, 1, 0.54902, 1 )
extra_spacing_bottom = -5
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
outline_size = 3
outline_color = Color( 0.753906, 0.355602, 0.355602, 1 )
extra_spacing_bottom = -5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0.231373, 0.196078, 0.196078, 1 )
extra_spacing_bottom = -5
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 275, 380 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 275, 0, 275, 380 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 550, 0, 275, 380 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 825, 0, 275, 380 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 0, 380, 275, 380 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 275, 380, 275, 380 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 550, 380, 275, 380 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 825, 380, 275, 380 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 0, 760, 275, 380 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 275, 760, 275, 380 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 550, 760, 275, 380 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 825, 760, 275, 380 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 0, 1140, 275, 380 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 275, 1140, 275, 380 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 10 )
region = Rect2( 550, 1140, 275, 380 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 10 )
region = Rect2( 825, 1140, 275, 380 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="Card" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -450.0
margin_right = -336.0
margin_bottom = -354.0
rect_min_size = Vector2( 80, 112 )
script = ExtResource( 6 )

[node name="BorderColor" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0.960784, 0.643137, 1 )

[node name="Ico" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -2.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="CardFront" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 6.0
margin_right = -10.0
margin_bottom = -86.0
custom_colors/font_color = Color( 0.2, 0.211765, 0.243137, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 2 )
text = "SOLDIER"
align = 1
autowrap = true

[node name="GoldBox" type="HBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -21.0
margin_right = 56.0
margin_bottom = -6.0
custom_constants/separation = -9

[node name="Gold1" type="TextureRect" parent="GoldBox"]
margin_right = 15.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Gold2" type="TextureRect" parent="GoldBox"]
margin_left = 6.0
margin_right = 21.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Gold3" type="TextureRect" parent="GoldBox"]
margin_left = 12.0
margin_right = 27.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Gold4" type="TextureRect" parent="GoldBox"]
margin_left = 18.0
margin_right = 33.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Gold5" type="TextureRect" parent="GoldBox"]
margin_left = 24.0
margin_right = 39.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Gold6" type="TextureRect" parent="GoldBox"]
margin_left = 30.0
margin_right = 45.0
margin_bottom = 15.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="CostGold" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 85.0
margin_right = -52.0
margin_bottom = -5.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Cost" type="Label" parent="CostGold"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -2.0
margin_right = 2.0
custom_colors/font_color = Color( 0.15802, 0.16606, 0.1875, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 4 )
text = "6"
align = 1
valign = 1
autowrap = true

[node name="CardArea" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true

[node name="BurnIco" type="TextureRect" parent="."]
modulate = Color( 0.760784, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 53.0
margin_top = 84.0
margin_right = -4.0
margin_bottom = -5.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="BurnIco2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_top = 85.0
margin_right = -5.0
margin_bottom = -6.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Warning" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.5
margin_right = 40.0
margin_bottom = 34.5
custom_colors/font_color = Color( 0.168627, 0.172549, 0.176471, 1 )
custom_constants/line_spacing = 1
custom_fonts/font = SubResource( 5 )
text = "Faltan Casas"
align = 1
valign = 1
autowrap = true

[node name="BurnColor" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.611765 )
__meta__ = {
"_edit_group_": true
}

[node name="Bg" type="ColorRect" parent="BurnColor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 85.0
margin_right = -2.0
margin_bottom = -2.0
color = Color( 0.513726, 0, 0, 1 )

[node name="Gold1" type="TextureRect" parent="BurnColor/Bg"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -23.0
margin_right = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="BurnColor/Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = -16.0
margin_bottom = -2.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "BURN!"
valign = 1
autowrap = true

[node name="BurnArea" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 83.0
focus_mode = 0
flat = true

[node name="DisableMouse" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="BurnAnimSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 39, 56 )
scale = Vector2( 0.321, 0.321 )
frames = SubResource( 21 )
